clean-up commit

--- a/3_module_trait_correlation.ipynb
+++ b/3_module_trait_correlation.ipynb
@@ -204,7 +204,9 @@
   {
    "cell_type": "markdown",
    "id": "610ab5a9-976b-459d-b053-ea9abb8d61dd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Trait correlations"
    ]
